--- a/project_description/new_latex_documentation/msc-docs-template/main.tex
+++ b/project_description/new_latex_documentation/msc-docs-template/main.tex
@@ -23,6 +23,7 @@
 \usepackage{polski}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
+\usepackage{indentfirst}
 
 \captionsetup[figure]{labelfont={bf}, textfont={small}}
 \captionsetup[subfigure]{labelfont={bf}, textfont={small}}
